adding div to navigation

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   </head>
 <body>
     <header>
-	 <h1>VIH MODESTE DOGO</h1>
+	 <div class="navigation">
 	   <ul>
 	   <li><a href="index.html">Home</a></li>
 	   <li><a href="resume.html">Resume</a></li>
 	   <li><a href="favorite.html">Favorite</a></li>
 	  </ul>
+	  </div>
 	</header>
 	<section>
 	 <h2> My origin</h2>
