--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 <body>
     <header>
-	 <div class="navigation">
+	 <div class="nav">
 	   <ul>
 	   <li><a href="index.html">Home</a></li>
 	   <li><a href="resume.html">Resume</a></li>
