--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Welcome to my Website</title>
+    <title>ITMD 361 Project2</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
 <body>
@@ -16,7 +16,7 @@
 	  </div>
 	</header>
 	<section>
-	 <h2> My origin</h2>
+	 <h2> Welcome to my Website</h2>
      <p>I am from Côte d'Ivoire a West African country with beach resorts, rainforests and a French-colonial legacy. Abidjan, on the Atlantic coast, is the country’s major urban center. Its modern landmarks include zigguratlike, concrete La Pyramide and St. Paul's Cathedral, a swooping structure tethered to a massive cross. North of the central business district, Banco National Park is a rainforest preserve with hiking trails.</p>
 	</section>
      <img src="img/ivory.jpg" alt="Cote d'Ivoire">	 
