--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   </head>
 <body>
     <header>
-	 <div class="nav">
+	 <nav class="navigation">
 	   <ul>
 	   <li><a href="index.html">Home</a></li>
 	   <li><a href="resume.html">Resume</a></li>
 	   <li><a href="favorite.html">Favorite</a></li>
 	  </ul>
-	  </div>
+	 </nav>
 	</header>
-	<section>
-	 <h2> Welcome to my Website</h2>
-     <p>I am from Côte d'Ivoire a West African country with beach resorts, rainforests and a French-colonial legacy. Abidjan, on the Atlantic coast, is the country’s major urban center. Its modern landmarks include zigguratlike, concrete La Pyramide and St. Paul's Cathedral, a swooping structure tethered to a massive cross. North of the central business district, Banco National Park is a rainforest preserve with hiking trails.</p>
+	<section id="origine">
+	 <h2>My country of Origin</h2>
+     <p>Côte d'Ivoire is a West African country with beach resorts, rainforests and a French-colonial legacy. Abidjan, on the Atlantic coast, is the country’s major urban center. Its modern landmarks include zigguratlike, concrete La Pyramide and St. Paul's Cathedral, a swooping structure tethered to a massive cross. North of the central business district, Banco National Park is a rainforest preserve with hiking trails.</p>
 	</section>
      <img src="img/ivory.jpg" alt="Cote d'Ivoire">	 
-    <section>
+    <section id="objectives"">
 	 <h2> My Objectives</h2>
      <p>To get higher education in order to enhance my career and make the most of my potential and discover new horizons in the field of acting.</p>
 	</section>
