--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <title>VIH DOGO RESUME</title>
   </head>
   <body>
-    <header>
+    <header id="nav">
 	 <h1>VIH MODESTE DOGO</h1>
 	   <ul>
 	   <li><a href="index.html">Home</a></li>
@@ -13,14 +13,14 @@
 	   <li><a href="favorite.html">Favorite</a></li>
 	  </ul>
 	</header>
-	<section>
+	<section id="summary">
 	    <h2>Professional Summary</h2>
 		 <p>Senior telecommunications Engineer with over 10 years of national and international experience in voice and
 		 data network support and deployment. Proficient in RAN technical support, network integration and
 		 optimization. Strong process and projects management skills with outstanding ability to streamline
 		 implementations, configurations and operations</p>
 	</section>
-	<section>
+	<section id="skills">
 	    <h2>Skills</h2>
 		<ul>
 		<li>Network Design and Provisioning</li>
@@ -31,7 +31,7 @@
 		<li>Cisco Network administration </li>
 		</ul>
 	</section>
-	<section>
+	<section id="experience">
 	    <h2>Work experience</h2>
 	    <h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
 		<ul>
@@ -57,7 +57,7 @@
 		<li>Commissioned and integrated network equipment (BSC/RNC/(e)NodeB/BTS/ASN gateway/PCU)</li>
 		</ul>
 	</section>
-	<section>
+	<section class="resume">
 	    <h2> Education and certification</h2>	
 		<ul>
 		<li> Computer Science Engineering -- 2010</li>
@@ -66,7 +66,7 @@
 		<li> Splunk data analytics certified </li>
 		</ul>
     </section>
-    <section>
+    <section class="resume">
 	    <h2>Professional Network</h2>
 	       <a href="https://www.linkedin.com/in/vih-modeste-dogo-5697b343/">My Linkedin Profile</a>
 	</section>
