adding style in resume

--- a/resume.html
+++ b/resume.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>VIH DOGO RESUME</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header id="nav">
-	 <h1>VIH MODESTE DOGO</h1>
-	   <ul>
+    <header>
+	<nav class="navigation">
+	  <ul>
 	   <li><a href="index.html">Home</a></li>
 	   <li><a href="resume.html">Resume</a></li>
 	   <li><a href="favorite.html">Favorite</a></li>
 	  </ul>
+	 </nav>
 	</header>
 	<section id="summary">
 	    <h2>Professional Summary</h2>
