changing display on index.html

--- a/index.html
+++ b/index.html
@@ -15,19 +15,25 @@
 	  </ul>
 	 </nav>
 	</header>
-	<section id="origine">
-	 <h2>My country of Origin</h2>
-     <p>Côte d'Ivoire is a West African country with beach resorts, rainforests and a French-colonial legacy. Abidjan, on the Atlantic coast, is the country’s major urban center. Its modern landmarks include zigguratlike, concrete La Pyramide and St. Paul's Cathedral, a swooping structure tethered to a massive cross. North of the central business district, Banco National Park is a rainforest preserve with hiking trails.</p>
-	</section>
-     <img src="img/ivory.jpg" alt="Cote d'Ivoire">	 
-    <section id="objectives"">
-	 <h2> My Objectives</h2>
-     <p>To get higher education in order to enhance my career and make the most of my potential and discover new horizons in the field of acting.</p>
-	</section>
-     <img src="img/roadmap.jpg" alt="Roadmap">
-	<section>
+	<div id="origine">
+	  <div class="text">
+	  <h2>My country of Origin</h2>
+      <p>Côte d'Ivoire is a West African country with beach resorts, rainforests and a French-colonial legacy. Abidjan, on the Atlantic coast, is the country’s major urban center. Its modern landmarks include zigguratlike, concrete La Pyramide and St. Paul's Cathedral, a swooping structure tethered to a massive cross. North of the central business district, Banco National Park is a rainforest preserve with hiking trails.</p>
+	  </div>
+	  <div class="image">
+      <img src="img/ivory.jpg" alt="Cote d'Ivoire">	
+      </div>
+      <div class="text"
+	  <h2> My Objectives</h2>
+      <p>To get higher education in order to enhance my career and make the most of my potential and discover new horizons in the field of acting.</p>
+	  </div>
+	  <div class="image">
+      <img src="img/roadmap.jpg" alt="Roadmap">
+	  </div>
+	</div>
+	<div id="contact">
 	 <h2>Contact</h2>
      <p>vdogo@hawk.iit.edu</p>
-	</section>
+	</div>
 </body>
 </html>
