adding style to favorites

--- a/favorite.html
+++ b/favorite.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>favorite & Hobbies</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 	<header>
-	 <h1>Favorites Sports</h1>
+	 <nav class="navigation">
 	  <ul>
 	   <li><a href="index.html">Home</a></li>
 	   <li><a href="resume.html">Resume</a></li>
 	   <li><a href="favorite.html">Favorite</a></li>
 	  </ul>
+	 </nav>
 	</header>
+	<div>
+	 <h1>Favorites Sports</h1>
+	</div>
 	<section>
 	 <h2>Soccer</h2>
        <p>My Soccer team</p>
