--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	  <div class="image">
       <img src="img/ivory.jpg" alt="Cote d'Ivoire">	
       </div>
-      <div class="text"
+      <div class="text">
 	  <h2> My Objectives</h2>
       <p>To get higher education in order to enhance my career and make the most of my potential and discover new horizons in the field of acting.</p>
 	  </div>
