updating style in resume

--- a/resume.html
+++ b/resume.html
@@ -15,14 +15,14 @@
 	  </ul>
 	 </nav>
 	</header>
-	<section id="summary">
+	<div id="summary">
 	    <h2>Professional Summary</h2>
 		 <p>Senior telecommunications Engineer with over 10 years of national and international experience in voice and
 		 data network support and deployment. Proficient in RAN technical support, network integration and
 		 optimization. Strong process and projects management skills with outstanding ability to streamline
 		 implementations, configurations and operations</p>
-	</section>
-	<section id="skills">
+	</div>
+	<div id="skills">
 	    <h2>Skills</h2>
 		<ul>
 		<li>Network Design and Provisioning</li>
@@ -32,10 +32,11 @@
 		<li>Data and logs analytics </li>
 		<li>Cisco Network administration </li>
 		</ul>
-	</section>
-	<section id="experience">
+	</div>
+	<div id="experience">
 	    <h2>Work experience</h2>
-	    <h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
+	    <div id="recent">
+		<h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
 		<ul>
 		<li>LTE network data statistical analysis</li>
 		<li>RAN testing support</li>
@@ -49,7 +50,8 @@
 		<li>Self optimizing solution deployed and customized during optimization projects</li>
 		<li>Performed system integration and regression tests for new functionalities and VoLTE uses cases.</li>
 		</ul>
-	
+	    </div>
+	    <div id="old">
 	    <h4> Huawei Technologies , International :    July 2006 to November 2013</h4>
 		<ul>
 		<li>Delivered 2G/3G/WIMAX/LTE projects</li>
@@ -58,8 +60,9 @@
 		<li>IP network design performed for 3G network and new OSS deployed</li>
 		<li>Commissioned and integrated network equipment (BSC/RNC/(e)NodeB/BTS/ASN gateway/PCU)</li>
 		</ul>
-	</section>
-	<section class="resume">
+		<div>
+	</div>
+	<div id="edu">
 	    <h2> Education and certification</h2>	
 		<ul>
 		<li> Computer Science Engineering -- 2010</li>
@@ -67,11 +70,11 @@
 		<li> CISCO CCNA Certified </li>
 		<li> Splunk data analytics certified </li>
 		</ul>
-    </section>
-    <section class="resume">
+    </div>
+    <div id="network">
 	    <h2>Professional Network</h2>
 	       <a href="https://www.linkedin.com/in/vih-modeste-dogo-5697b343/">My Linkedin Profile</a>
-	</section>
+	</div>
   
   </body>
 </html>
