--- a/resume.html
+++ b/resume.html
@@ -15,14 +15,14 @@
 	  </ul>
 	 </nav>
 	</header>
-	<div id="summary">
+	<div class="left">
 	    <h2>Professional Summary</h2>
 		 <p>Senior telecommunications Engineer with over 10 years of national and international experience in voice and
 		 data network support and deployment. Proficient in RAN technical support, network integration and
 		 optimization. Strong process and projects management skills with outstanding ability to streamline
 		 implementations, configurations and operations</p>
 	</div>
-	<div id="skills">
+	<div class="right">
 	    <h2>Skills</h2>
 		<ul>
 		<li>Network Design and Provisioning</li>
@@ -35,7 +35,7 @@
 	</div>
 	<div id="experience">
 	    <h2>Work experience</h2>
-	    <div id="recent">
+	    <div class="left">
 		<h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
 		<ul>
 		<li>LTE network data statistical analysis</li>
@@ -51,7 +51,7 @@
 		<li>Performed system integration and regression tests for new functionalities and VoLTE uses cases.</li>
 		</ul>
 	    </div>
-	    <div id="old">
+	    <div class="right">
 	    <h4> Huawei Technologies , International :    July 2006 to November 2013</h4>
 		<ul>
 		<li>Delivered 2G/3G/WIMAX/LTE projects</li>
@@ -62,7 +62,7 @@
 		</ul>
 		<div>
 	</div>
-	<div id="edu">
+	<div class="left">
 	    <h2> Education and certification</h2>	
 		<ul>
 		<li> Computer Science Engineering -- 2010</li>
@@ -71,7 +71,7 @@
 		<li> Splunk data analytics certified </li>
 		</ul>
     </div>
-    <div id="network">
+    <div class="right">
 	    <h2>Professional Network</h2>
 	       <a href="https://www.linkedin.com/in/vih-modeste-dogo-5697b343/">My Linkedin Profile</a>
 	</div>
