--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
 		<li>Cisco Network administration </li>
 		</ul>
 	</div>
-	<div id="experience">
+	<div class="wrapper">
 	    <h2>Work experience</h2>
 	    <div class="left">
 		<h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
@@ -62,6 +62,7 @@
 		</ul>
 		<div>
 	</div>
+	
 	<div class="left">
 	    <h2> Education and certification</h2>	
 		<ul>
