--- a/resume.html
+++ b/resume.html
@@ -62,9 +62,10 @@
 		</ul>
 		<div>
 	</div>
-	
+	<div class="wrapper">
+	 <h2>Network and Education</h2>
 	<div class="left">
-	    <h2> Education and certification</h2>	
+	    <h4> Education and certification</h4>	
 		<ul>
 		<li> Computer Science Engineering -- 2010</li>
 		<li> PMP Certified -- Project Management Institute</li>
@@ -73,9 +74,9 @@
 		</ul>
     </div>
     <div class="right">
-	    <h2>Professional Network</h2>
+	    <h4>Professional Network</h4>
 	       <a href="https://www.linkedin.com/in/vih-modeste-dogo-5697b343/">My Linkedin Profile</a>
 	</div>
-  
+    </div>
   </body>
 </html>
