--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-	<nav class="navigation">
+	 <nav class="navigation">
 	  <ul>
 	   <li><a href="index.html">Home</a></li>
 	   <li><a href="resume.html">Resume</a></li>
@@ -15,14 +15,14 @@
 	  </ul>
 	 </nav>
 	</header>
-	<div class="left">
+	 <div id="left1">
 	    <h2>Professional Summary</h2>
 		 <p>Senior telecommunications Engineer with over 10 years of national and international experience in voice and
 		 data network support and deployment. Proficient in RAN technical support, network integration and
 		 optimization. Strong process and projects management skills with outstanding ability to streamline
 		 implementations, configurations and operations</p>
-	</div>
-	<div class="right">
+	 </div>
+	 <div id="right1">
 	    <h2>Skills</h2>
 		<ul>
 		<li>Network Design and Provisioning</li>
@@ -32,10 +32,10 @@
 		<li>Data and logs analytics </li>
 		<li>Cisco Network administration </li>
 		</ul>
-	</div>
+	 </div>
 	<div class="wrapper">
 	    <h2>Work experience</h2>
-	    <div class="left">
+	  <div id="left2">
 		<h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
 		<ul>
 		<li>LTE network data statistical analysis</li>
@@ -50,8 +50,8 @@
 		<li>Self optimizing solution deployed and customized during optimization projects</li>
 		<li>Performed system integration and regression tests for new functionalities and VoLTE uses cases.</li>
 		</ul>
-	    </div>
-	    <div class="right">
+	  </div>
+	  <div id="right2">
 	    <h4> Huawei Technologies , International :    July 2006 to November 2013</h4>
 		<ul>
 		<li>Delivered 2G/3G/WIMAX/LTE projects</li>
@@ -60,11 +60,11 @@
 		<li>IP network design performed for 3G network and new OSS deployed</li>
 		<li>Commissioned and integrated network equipment (BSC/RNC/(e)NodeB/BTS/ASN gateway/PCU)</li>
 		</ul>
-		<div>
+      <div>
 	</div>
 	<div class="wrapper">
 	 <h2>Network and Education</h2>
-	<div class="left">
+	<div id="left3">
 	    <h4> Education and certification</h4>	
 		<ul>
 		<li> Computer Science Engineering -- 2010</li>
@@ -73,7 +73,7 @@
 		<li> Splunk data analytics certified </li>
 		</ul>
     </div>
-    <div class="right">
+    <div id="right3">
 	    <h4>Professional Network</h4>
 	       <a href="https://www.linkedin.com/in/vih-modeste-dogo-5697b343/">My Linkedin Profile</a>
 	</div>
