validating HTML code

--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
 		<li>IP network design performed for 3G network and new OSS deployed</li>
 		<li>Commissioned and integrated network equipment (BSC/RNC/(e)NodeB/BTS/ASN gateway/PCU)</li>
 		</ul>
-      <div>
+      </div>
 	</div>
 	<div class="wrapper">
 	 <h2>Network and Education</h2>
