adding div to title

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,9 @@
 		</ul>
 	 </div>
 	<div class="wrapper">
+	  <div>
 	    <h2>Work experience</h2>
+	  </div>
 	  <div id="left2">
 		<h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
 		<ul>
@@ -63,7 +65,9 @@
       </div>
 	</div>
 	<div class="wrapper">
+	<div>
 	 <h2>Network and Education</h2>
+	</div>
 	<div id="left3">
 	    <h4> Education and certification</h4>	
 		<ul>
