--- a/resume.html
+++ b/resume.html
@@ -33,9 +33,9 @@
 		<li>Cisco Network administration </li>
 		</ul>
 	 </div>
-	 <div>
+	 <div id="block">
 	    <h2>Work experience</h2>
-	  </div>
+	 </div>
 	  <div id="left2">
 		<h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
 		<ul>
@@ -63,7 +63,7 @@
 		</ul>
       </div>
 
-	<div>
+	<div id="block">
 	 <h2>Network and Education</h2>
 	</div>
 	<div id="left3">
