correcting style sheet

--- a/favorite.html
+++ b/favorite.html
@@ -15,21 +15,23 @@
 	  </ul>
 	 </nav>
 	</header>
-	<div class="title">
+	<div id="title">
 	 <h1>Favorites Sports</h1>
 	</div>
-	<section>
+	<div id="soccer">
 	 <h2>Soccer</h2>
        <p>My Soccer team</p>
-	</section>
-     <img src="img/soccer.jpg" alt="Soccer team">	 
-    <section>
+	</div>
+	<div id="team">
+     <img src="img/soccer.jpg" alt="Soccer team">	
+    </div>	 
+    <div id="skiing">
 	 <h2>Skiing</h2>
-    </section>
      <img src="img/skiing.jpg" alt="Skiing">
-	<section>
+	</div>
+	<div id="music">
 		 <h2>My Favorite Music</h2>
 		 <iframe src="https://www.youtube.com/embed/_YJ4vddbJJo" allowfullscreen></iframe>
-	</section>
+	</div>
   </body>
 </html>
