--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
 		<li>Cisco Network administration </li>
 		</ul>
 	 </div>
-	 <div id="block">
+	 <div class="block">
 	    <h2>Work experience</h2>
 	 </div>
 	  <div id="left2">
@@ -63,7 +63,7 @@
 		</ul>
       </div>
 
-	<div id="block">
+	<div class="block">
 	 <h2>Network and Education</h2>
 	</div>
 	<div id="left3">
@@ -79,6 +79,6 @@
 	    <h4>Professional Network</h4>
 	       <a href="https://www.linkedin.com/in/vih-modeste-dogo-5697b343/">My Linkedin Profile</a>
 	</div>
-    </div>
+ 
   </body>
 </html>
