--- a/favorite.html
+++ b/favorite.html
@@ -19,12 +19,11 @@
 	 <h1>Favorites Sports</h1>
 	</div>
 	<div id="soccer">
-	 <h2>Soccer</h2>
-       <p>My Soccer team</p>
-	   <img src="img/soccer.jpg" alt="Soccer team">	
+	 <h2>My Soccer team</h2>
+      <img src="img/soccer.jpg" alt="Soccer team">	
     </div>	 
     <div id="skiing">
-	 <h2>Skiing</h2>
+	 <h2>I enjoyed Skiing</h2>
      <img src="img/skiing.jpg" alt="Skiing">
 	</div>
 	<div id="music">
