adding div to favorite

--- a/favorite.html
+++ b/favorite.html
@@ -15,8 +15,8 @@
 	  </ul>
 	 </nav>
 	</header>
-	<div id="title">
-	 <h1>Favorites Sports</h1>
+	<div class="title">
+	 <h2>Favorites Sports</h2>
 	</div>
 	<div id="soccer">
 	 <h2>My Soccer team</h2>
@@ -26,8 +26,10 @@
 	 <h2>I enjoyed Skiing</h2>
      <img src="img/skiing.jpg" alt="Skiing">
 	</div>
+	<div class="title">
+		 <h2>My Favorite Song</h2>
+	</div>
 	<div id="music">
-		 <h2>My Favorite Music</h2>
 		 <iframe src="https://www.youtube.com/embed/_YJ4vddbJJo" allowfullscreen></iframe>
 	</div>
   </body>
