adding block around div

--- a/resume.html
+++ b/resume.html
@@ -15,14 +15,15 @@
 	  </ul>
 	 </nav>
 	</header>
-	 <div id="left1">
+	<div class="block">
+	  <div id="left1">
 	    <h2>Professional Summary</h2>
 		 <p>Senior telecommunications Engineer with over 10 years of national and international experience in voice and
 		 data network support and deployment. Proficient in RAN technical support, network integration and
 		 optimization. Strong process and projects management skills with outstanding ability to streamline
 		 implementations, configurations and operations</p>
-	 </div>
-	 <div id="right1">
+	  </div>
+	  <div id="right1">
 	    <h2>Skills</h2>
 		<ul>
 		<li>Network Design and Provisioning</li>
@@ -32,10 +33,10 @@
 		<li>Data and logs analytics </li>
 		<li>Cisco Network administration </li>
 		</ul>
-	 </div>
+	  </div>
+	</div>
 	 <div class="block">
 	    <h2>Work experience</h2>
-	 </div>
 	 <div id="left2">
 		<h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
 		<ul>
@@ -62,11 +63,10 @@
 		<li>Commissioned and integrated network equipment (BSC/RNC/(e)NodeB/BTS/ASN gateway/PCU)</li>
 		</ul>
      </div>
-
+	</div>
 	<div class="block">
 	 <h2>Network and Education</h2>
-	</div>
-	<div id="left3">
+	 <div id="left3">
 	    <h4> Education and certification</h4>	
 		<ul>
 		<li> Computer Science Engineering -- 2010</li>
@@ -74,11 +74,11 @@
 		<li> CISCO CCNA Certified </li>
 		<li> Splunk data analytics certified </li>
 		</ul>
-    </div>
-    <div id="right3">
+     </div>
+     <div id="right3">
 	    <h4>Professional Network</h4>
 	       <a href="https://www.linkedin.com/in/vih-modeste-dogo-5697b343/">My Linkedin Profile</a>
-	</div>
- 
+	 </div>
+    </div>
   </body>
 </html>
