--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 		<li>LTE network data statistical analysis</li>
 		<li>RAN testing support</li>
 		<li>Data analytics platform design preparation</li>
-		<li>Inflight equipments testing and	troublshooting</li>
+		<li>LTE Network Flight Test performance and logs analysis</li>
 		</ul>
 		<h4>Optulink Inc, Naperville,Il :     April 2014 to November 2017</h4>
 		<ul>
