update a message on Favorite page

--- a/favorite.html
+++ b/favorite.html
@@ -23,7 +23,7 @@
       <img src="img/soccer.jpg" alt="Soccer team">	
     </div>	 
     <div id="skiing">
-	 <h2>I enjoyed Skiing</h2>
+	 <h2>I always enjoy skiing , it is one of my favorite</h2>
      <img src="img/skiing.jpg" alt="Skiing">
 	</div>
 	<div class="title">
