--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 	  </ul>
 	 </nav>
 	</header>
+	<main id="home">
+	  <section id="welcome">
+	   <h2> Vih Modeste Dogo</h2>
+	   <p>Welcome to my website , this is all about me</p>
+	  </section>
+	</main>
 	  <div class="text">
 	  <h2>My country of Origin</h2>
       <p>Côte d'Ivoire is a West African country with beach resorts, rainforests and a French-colonial legacy. Abidjan, on the Atlantic coast, is the country’s major urban center. Its modern landmarks include zigguratlike, concrete La Pyramide and St. Paul's Cathedral, a swooping structure tethered to a massive cross. North of the central business district, Banco National Park is a rainforest preserve with hiking trails.</p>
