--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<main id="home">
 	  <section id="welcome">
 	   <h2> Vih Modeste Dogo</h2>
-	   <p>Welcome to my website , this is all about me</p>
+	   <p>Welcome to my website</p>
 	  </section>
 	</main>
 	  <div class="text">
