adding header on Resume

--- a/favorite.html
+++ b/favorite.html
@@ -15,6 +15,12 @@
 	  </ul>
 	 </nav>
 	</header>
+	<main id="home">
+	  <section id="welcome">
+	   <h2> Vih Modeste Dogo</h2>
+	   <p>Favorite</p>
+	  </section>
+	</main>
 	<div class="title">
 	 <h2>Favorites Sports</h2>
 	</div>
