--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,12 @@
 	  </ul>
 	 </nav>
 	</header>
+	<main id="home">
+	  <section id="welcome">
+	   <h2> Vih Modeste Dogo</h2>
+	   <p>Resume</p>
+	  </section>
+	</main>
 	<div class="block">
 	  <div id="left1">
 	    <h2>Professional Summary</h2>
