--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,10 @@
 	</header>
 	<main id="home">
 	  <section id="welcome">
-	   <h2> Vih Modeste Dogo</h2>
-	   <p>Resume</p>
+	   <h2> Vih Modeste Dogo,PMP</h2>
+	   <p>Telecommunications & Project Management</p>
+	   <p>vdogo@hawk.iit.edu</p>
+	   <p>+18159197392</p>
 	  </section>
 	</main>
 	<div class="block">
