--- a/favorite.html
+++ b/favorite.html
@@ -18,22 +18,22 @@
 	<main id="home">
 	  <section id="welcome">
 	   <h2> Vih Modeste Dogo</h2>
-	   <p>Favorite</p>
+	   
 	  </section>
 	</main>
-	<div class="title">
+	<div id="title1">
 	 <h2>Favorites Sports</h2>
 	</div>
 	<div id="soccer">
-	 <h2>My Soccer team</h2>
-      <img src="img/soccer.jpg" alt="Soccer team">	
+	 <h4>My home soccer team has one of the best soccer player in the world "Didier Drogba" No 11.</h4>
+      <img src="img/soccer.jpg" alt="Soccer team">	 
     </div>	 
     <div id="skiing">
-	 <h2>I always enjoy skiing , it is one of my favorite</h2>
+	 <h4>During winter, I love spending time with the family skiing</h4>
      <img src="img/skiing.jpg" alt="Skiing">
 	</div>
-	<div class="title">
-		 <h2>My Favorite Song</h2>
+	<div id="title2">
+		 <h4>My God is Awesome , he is my shepherd and my provider I have his favor every day in my life. This song is my daily inspiration.</h4>
 	</div>
 	<div id="music">
 		 <iframe src="https://www.youtube.com/embed/_YJ4vddbJJo" allowfullscreen></iframe>
