making changes for final turn in

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>VIH DOGO RESUME</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <header>
@@ -18,7 +18,7 @@
 	<main id="home">
 	  <section id="welcome">
 	   <h2> Vih Modeste Dogo,PMP</h2>
-	   <p>Telecommunications & Project Management</p>
+	   <p>Telecommunications &amp; Project Management</p>
 	   <p>vdogo@hawk.iit.edu</p>
 	   <p>+18159197392</p>
 	  </section>
@@ -44,7 +44,6 @@
 	  </div>
 	</div>
 	 <div class="block">
-	    
 	 <div id="left2">
 	  <h2>Work experience</h2>
 		<h4> Gogo LLC, Chicago,Il :     Since January 2018 to Present </h4>
@@ -66,7 +65,7 @@
 	    <h4> Huawei Technologies , International :    July 2006 to November 2013</h4>
 		<ul>
 		<li>Delivered 2G/3G/WIMAX/LTE projects</li>
-		<li>Led the technical team for managed services and network issues escalation to Huawei R&D.</li>
+		<li>Led the technical team for managed services and network issues escalation to Huawei R&amp;D.</li>
 		<li>Collected and analyzed network KPIs and managed RF optimization operations and drive test</li>
 		<li>IP network design performed for 3G network and new OSS deployed</li>
 		<li>Commissioned and integrated network equipment (BSC/RNC/(e)NodeB/BTS/ASN gateway/PCU)</li>
@@ -76,17 +75,17 @@
 	<div class="block">
 	 <h2>Network and Education</h2>
 	 <div id="left3">
-	    <h4> Education and certification</h4>	
-		<ul>
+	   <h4> Education and certification</h4>	
+	   <ul>
 		<li> Computer Science Engineering -- 2010</li>
 		<li> PMP Certified -- Project Management Institute</li>
 		<li> CISCO CCNA Certified </li>
 		<li> Splunk data analytics certified </li>
-		</ul>
+	  </ul>
      </div>
      <div id="right3">
-	    <h4>Professional Network</h4>
-	       <a href="https://www.linkedin.com/in/vih-modeste-dogo-5697b343/">My Linkedin Profile</a>
+	  <h4>Professional Network</h4>
+	    <a href="https://www.linkedin.com/in/vih-modeste-dogo-5697b343/">My Linkedin Profile</a>
 	 </div>
     </div>
   </body>
