--- a/favorite.html
+++ b/favorite.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>favorite & Hobbies</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <title>favorite &amp; Hobbies</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
 	<header>
@@ -17,8 +17,7 @@
 	</header>
 	<main id="home">
 	  <section id="welcome">
-	   <h2> Vih Modeste Dogo</h2>
-	   
+	  <h2> Vih Modeste Dogo</h2>
 	  </section>
 	</main>
 	<div id="title1">
@@ -26,17 +25,17 @@
 	</div>
 	<div id="soccer">
 	 <h4>My home soccer team has one of the best soccer player in the world "Didier Drogba" No 11.</h4>
-      <img src="img/soccer.jpg" alt="Soccer team">	 
+     <img src="img/soccer.jpg" alt="Soccer team">	 
     </div>	 
     <div id="skiing">
 	 <h4>During winter, I love spending time with the family skiing</h4>
      <img src="img/skiing.jpg" alt="Skiing">
 	</div>
 	<div id="title2">
-		 <h4>My God is Awesome , he is my shepherd and my provider I have his favor every day in my life. This song is my daily inspiration.</h4>
+	  <h4>My God is Awesome , he is my shepherd and my provider I have his favor every day in my life. This song is my daily inspiration.</h4>
 	</div>
 	<div id="music">
-		 <iframe src="https://www.youtube.com/embed/_YJ4vddbJJo" allowfullscreen></iframe>
+	  <iframe src="https://www.youtube.com/embed/_YJ4vddbJJo" allowfullscreen></iframe>
 	</div>
   </body>
 </html>
